# weave-gate

./: .gitignore  Cargo.toml  README.md  weavegate.example.toml
.cursor/rules/: project-overview.mdc  proxy-routes.mdc  rust-conventions.mdc  testing-bench.mdc  weavegate-config.mdc
benches/: Cargo.toml  control_headers.rs  http_ext.rs  static_files.rs
docker/alpine/: entrypoint.sh
docker/public/: index.html
docs/: routes-bootstrap-v1.md
docs/content/: getting-started.md  index.md
fuzz/: Cargo.toml
fuzz/src/: static_files.rs
scripts/: bench-proxy.sh  go.sh  mock-routes-server.sh  pack-source.sh
src/: basic_auth.rs  compression.rs  compression_static.rs  conditional_headers.rs  control_headers.rs  cors.rs  custom_headers.rs  directory_listing_download.rs  error.rs  error_page.rs  fallback_page.rs  handler.rs  health.rs  helpers.rs  http_ext.rs  https_redirect.rs  lib.rs  log_addr.rs  logger.rs  maintenance_mode.rs  markdown.rs  metrics.rs  mime_ext.rs  proxy.rs  proxy_client.rs  proxy_compile.rs  proxy_sort.rs  redirects.rs  response.rs  rewrites.rs  security_headers.rs  server.rs  service.rs  signals.rs  static_files.rs  testing.rs  text_charset.rs  tls.rs  transport.rs  virtual_hosts.rs  (+1 more)
src/directory_listing/: dir.rs  file.rs  mod.rs  sort.rs  style.rs
src/directory_listing/autoindex/: html.rs  json.rs  mod.rs
src/fs/: meta.rs  mod.rs  path.rs  stream.rs
src/headers_ext/: accept.rs  mod.rs
src/mem_cache/: cache.rs  mod.rs
src/routes/: bootstrap.rs  document.rs  mod.rs
src/settings/: cli.rs  cli_output.rs  file.rs  mod.rs
systemd/: etc_default_static-web-server  static-web-server.service  weavegate.socket
tests/: compression.rs  compression_static.rs  cors.rs  dir_listing.rs  dir_listing_download.rs  experimental_metrics.rs  handler.rs  markdown.rs  proxy.rs  redirects.rs  rewrites.rs  routes_bootstrap.rs  settings.rs  static_files.rs  text_charset.rs
tests/fixtures/toml/: handler.toml  handler_fixtures.toml  proxies.toml
